--- a/scores.html
+++ b/scores.html
@@ -10,11 +10,11 @@
 <body>
     <h2 id="scores-title">High Scores</h2>
 
-    <!-- section for containing/displaying all of the scores -->
+    <!-- section for displaying all of the scores -->
     <section id="score-wrapper">
 
     </section>
-    <!-- section for containing/displaying the return and clear scores buttons -->
+    <!-- section for displaying the return and clear scores buttons -->
     <section id="button-wrapper">
         
     </section>
