--- a/scores.html
+++ b/scores.html
@@ -1,24 +1,33 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- use the same css file as index.html -->
-    <link rel="stylesheet" href="./assets/style.css">
-    <title>JavaScript Quiz Highscores</title>
+    <!-- Jamie Morris Homework-4 Code Quiz -->
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- This is the style links -->
+    <link rel="stylesheet" type="text/css" href="./assets/style.css">
+    <!-- This is the title-->
+    <title>Document</title>
+
 </head>
+
 <body>
-    <h2 id="scores-title">High Scores</h2>
-
-    <!-- section for displaying all of the scores -->
-    <section id="score-wrapper">
-
-    </section>
-    <!-- section for displaying the return and clear scores buttons -->
-    <section id="button-wrapper">
-        
-    </section>
-
+    <!-- This is a wrapper -->
+    <div id="wrapper">
+        <!-- Div for timer -->
+        <div id="currentTime"></div>
+        <!-- Div for quiz content -->
+        <div id="questionsDiv">
+            <h1>Highscores</h1>
+            <ul id="highScore"></ul>
+            <!-- Buttons -->
+            <button id="goBack">Go Back</button>
+            <button id="clear" value="reset">Clear Highscore</button>
+        </div>
+    </div>
     <script src="./assets/scores.js"></script>
 </body>
+
 </html>
